@@ -1,13 +1,0 @@
-language: minimal
-
-services: docker
-
-before_install:
-- docker pull tonyodell/rakudo-nightly:latest
-
-script:
-- docker run
-  -v $(pwd):/tmp/test:rw
-  -w /tmp/test
-  tonyodell/rakudo-nightly:latest
-  bash -c 'apt-get update; apt-get install -y ca-certificates; zef install -v --deps-only . && zef test .'
