@@ -1,6 +1,7 @@
 Revision history for Opt-Handler
 
 {{$NEXT}}
+    - Removed travis file
 
 0.0.2  2020-08-07T12:07:19-05:00
     - Add working tests
